--- a/mainpage/templates/mainpage/recipe_detail.html
+++ b/mainpage/templates/mainpage/recipe_detail.html
@@ -153,7 +153,9 @@
                 child[1].remove();         
             }
             const bookmark_status = "{{bookmark}}";
-            if (bookmark_status){
+            console.log("북마크 상태 : ", bookmark_status)
+            if (bookmark_status == "True"){
+                console.log("북마크 되어 있는 상태")
                 $("#bookmark_add").prepend('<span class="material-symbols-outlined" id="bookmark_status" onclick="ajax_bookmark()">bookmark_remove</span>');
                 
                 // .prepend('<i class="fa-regular fa-bookmark" id="bookmark_status" onclick="ajax_bookmark()"></i>')
