--- a/mainpage/static/aa.css
+++ b/mainpage/static/aa.css
@@ -15,7 +15,7 @@ body {
 #ingredient_container {
     align-self: center;
     text-align: center;
-    width: 70%;
+    
     top: 150px;
     margin-top: -20px;
     margin-left: -9px;
@@ -131,6 +131,7 @@ body {
 .int-area {
 
     position: relative;
+    left: 20px;
     margin-top : 20px;
 }
 .int-area:first-child {margin-top: 0;}
