--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -24,12 +24,39 @@ body {
     height:100%;
     overflow:hidden;
 }
-img {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width:100%;
-    height:100%;
+
+/* 로그인 로그아웃 아이콘 */
+
+.out {
+    position: relative;
+    top: 9px;
+    height: 32px;
+    width: 32px;
+
 }
+.logout_1 {
+    margin-bottom: 10px;
+    border:0;
+    outline:0;
+    background-color: #ffffff;
+}
+.in {
+    position: relative;
+    top: 9px;
+    height: 32px;
+    width: 32px;
+
+}
+.login_1 {
+    margin-bottom: 10px;
+    border:0;
+    outline:0;
+    background-color: #ffffff;
+}
+
+
+/* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
 .recipe-title {
     font-size:30px;
     font-weight:bold;
@@ -70,6 +97,7 @@ img {
 a {
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
 
 *,
@@ -153,8 +181,16 @@ a {
     font-size:10px;
 }
 
-#searchfield {
-    height:19px;
+
+
+.search1{
+    width: 100%;
+    text-align: center;
+    border-radius: 10px;
+    outline: none;
+    font-weight: bold;
+    background-color: #ffffff;
+    font-size: 1.3rem;
 }
 
 .weather {
@@ -165,7 +201,24 @@ a {
 .icon {
     display: inline-block;
     vertical-align:middle;
+    font-size: 20px;
+    text-shadow: 1px 1px 3px #f9d78c;
 }
+
+/*날씨 */
+.wea {
+    position: relative; 
+    z-index: 5; 
+    left : 80px;
+    border-radius: 20px;
+    width: 150px;
+    background-color: rgba(255, 252, 236, 0.3);
+    
+}
+
+
+
+
 
 #container {
     margin: auto;
@@ -405,8 +458,8 @@ ul.slider li {
 @media screen and (max-width: 850px) {
     .navbar {
         flex-direction: column;
-        align-items: flex-start;
         padding: 8px 24px;
+        outline:5px solid #F79604;
     }
     .navbar-expand-lg {
         flex-wrap: nowrap;
@@ -432,9 +485,12 @@ ul.slider li {
     .search {
         text-align: center;
     }
-    /* .my_info {
+    .my_info {
         text-align: center;
-    } */
+        font-size: 23px;
+        font-weight: bold;
+    }
+
     .weather {
         text-align: center;
         float:none;
@@ -479,6 +535,7 @@ ul.slider li {
 
     .main_common{
         display: inline;
+        
         /* width: 2rem;
         height: 2rem; */
     }
@@ -829,3 +886,9 @@ button {
     width:300px;
     margin:auto;
 }
+
+
+
+
+
+
