--- a/users/templates/signup2.html
+++ b/users/templates/signup2.html
@@ -1,39 +1,54 @@
-{% comment %} 회원가입 완료 안내 페이지  {% endcomment %}
-<html lang="en">
-   <head>
-       
-        <title>Pet dada signup finish</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'style3.css' %}">
 
+
+<head>
+       
+   <title>EAT VILLAGE login</title>
+   <meta charset="utf-8">
+   
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+   
+   {% load static %}
+   <script src="{% static 'a.js' %}"></script>
+   <link rel="stylesheet" href="{% static 'signup2.css' %}? after">
+   <html lang = "ko">
+   <head>
+       <meta charset="UTF-8">
+       <title>Login</title>
+       {% comment %} <link rel = "stylesheet" href = "style.css"> {% endcomment %}
+       {% comment %} <script src = "jquery-3.4.1.js"></script> {% endcomment %}
+   </head>
 </head>
 <body>
-   <div class ="login">
-      
-         <div class="account-login">
+<section class ="login-form">
+       <h1>EAT VILLAGE</h1>
+       {% include "layout.html" %}
+       <form method="post" action="{% url 'users:login' %}">
+          {% csrf_token %}
+          <div class="int-area">
+            <div class="caption">  
+               <h2>Please check your Email</h2>   
+               <br><a href="{% url 'users:login' %}">LOGIN</a>
+           </div>  
             
-            <form method="post" class="login-form" action="{% url 'users:login' %}">
-               <h1><center>Pet dada</h1>
-               
-               <br> <br>
-               <div style="color: #57422D;"
+          </div>
 
-               <h1><font size = '5.5'><center>Welcome! PET DADA!<br> Plese check your Email.<br> Thank you!
-                  
-               <div class="form-group">
-               </div>
-               </div>
-               <div class="form-group">
-               
-               <h2><p> <cneter> <font size = '5'>  <a href="{% url 'users:login' %}"> login </a></p></h2>
-               </div>
+       </form>
+
+</section>
 
 
-                  
-               </div>
+</body>
+
+
+
+
+
+
+</html> 
+
+
+
+
